--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,12 @@
 cmake_minimum_required(VERSION 3.2)
 
 set(CMAKE_CXX_STANDARD 20)
-project(LibRtTrace VERSION 0.1.0 LANGUAGES CXX)
+project(LibRtRender VERSION 0.1.0 LANGUAGES CXX)
 
 find_package(Vulkan REQUIRED)
 
 # Create library target
-add_library(rttrace STATIC
+add_library(rtintersect STATIC
     lib/api.hpp
     lib/device_factory.hpp
     lib/device_factory.cpp
@@ -21,8 +21,15 @@ add_library(rttrace STATIC
     lib/pixel_format.hpp
     lib/result.hpp
     lib/float3.hpp
+    lib/float3.cpp
     lib/bounding_box.hpp
     lib/bounding_box.cpp
+    lib/bottom_level_acceleration_structure.hpp
+    lib/bottom_level_acceleration_structure.cpp
+    lib/intersector.hpp
+    lib/intersector.cpp
+    lib/command_buffer.hpp
+    lib/command_buffer.cpp
 
     lib/cpu/device.hpp
     lib/cpu/device.cpp
@@ -32,8 +39,8 @@ add_library(rttrace STATIC
     lib/cpu/vertex_buffer.cpp
     lib/cpu/frame_buffer.hpp
     lib/cpu/frame_buffer.cpp
-    lib/cpu/acceleration_structure.hpp
-    lib/cpu/acceleration_structure.cpp
+    lib/cpu/bottom_level_acceleration_structure.hpp
+    lib/cpu/bottom_level_acceleration_structure.cpp
 
     lib/vulkan/device.hpp
     lib/vulkan/device.cpp
@@ -41,10 +48,12 @@ add_library(rttrace STATIC
     lib/vulkan/index_buffer.cpp
     lib/vulkan/vertex_buffer.hpp
     lib/vulkan/vertex_buffer.cpp
+    lib/vulkan/frame_buffer.hpp
+    lib/vulkan/frame_buffer.cpp
 )
 
-set_target_properties(rttrace PROPERTIES LINKER_LANGUAGE CXX)
-target_link_libraries(rttrace Vulkan::Vulkan)
+set_target_properties(rtintersect PROPERTIES LINKER_LANGUAGE CXX)
+target_link_libraries(rtintersect Vulkan::Vulkan)
 
 # Create executable target
 add_executable(RtTrace
@@ -53,4 +62,4 @@ add_executable(RtTrace
 
 # Link executable target with library target
 target_include_directories(RtTrace PRIVATE lib)
-target_link_libraries(RtTrace rttrace)
+target_link_libraries(RtTrace rtintersect)
